4.8 (12/02/19)
==============
Insert tasks when first picked up by the implant with start time
Update task when response returned with output and completed time
Log task ID in task sent/received
Add ability to set username and associate username to tasks issued
Rename CompletedTasks table to Tasks table
Method name refactoring around above changes
Pull out implant cores into Implant-Core.py/.cs/.ps1
Rename 2nd stage cores into Stage2-Core.py/.ps1
Stage2-Core.ps1 (previously Implant-Core.ps1) is no longer flagged by AMSI
Use prepared statements in the DB
Refactoring work to start to break up dependency cycle
Rename DB to Database in Config.py to avoid name clashes
Pull some dependency-less functions into Utils.py to aid dependency management
Fix download-file so that if the same file is downloaded multiple times it gets downloaded to name-1.ext name-2.ext etc
Adjust user/host printing to always be domain\user @ host in implants & logs
Fix CreateRawBase payload creation, used in gzip powershell stager and commands like get-system
Added ImplantID to Tasks table as a foreign key, so it's logged in the Tasks report
Added Testing.md for testing checklist/methodology
Fix Get-ScreenshotAllWindows to return correct file extension
Fix searchhelp for commands with caps
Implant timeout highlighting is now based on beacon time - yellow if it's not checked in for 3x beacon time and red if not checked in for 10x beacon time

4.7 (03/02/19)
==============
Added Opsec.py to allow users to state various command that they DO NOT want to run
Added Alias.py to allow users to have their own alias for various commands
Fixed HTML output to sort formatting once again

4.6 (26/12/18)
==============
Updated quickcommand on restart with new IP address
re-print quickstart when restarting C2Server.py
Updated migrate command in implant handler & added Escape for HTML output
Major refector of the portscanner by rolen
Fixed proxy payloads for powershell implant
Updated tasks command